force-app/main/default/objects/Partenaire_financeur__c/Partenaire_financeur__c.object-meta.xml
<CustomObject>
    <label>Partenaire financeur / collecteur OPCA</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partenaires financeurs/ collecteurs OPCO</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>