force-app/main/default/objects/Partenaire_financeur__c/fields/Compte_financeur__c.field-meta.xml
<CustomField>
    <fullName>Compte_financeur__c</fullName>
    <label>Compte financeur</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Partenaires_financeurs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>