force-app/main/default/objects/Partenaire_financeur__c/fields/Montant_financement__c.field-meta.xml
<CustomField>
    <fullName>Montant_financement__c</fullName>
    <description>Permet au commercial de saisir le montant de financement</description>
    <label>Montant financement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>