force-app/main/default/objects/Partenaire_financeur__c/fields/Nom_compte_financeur__c.field-meta.xml
<CustomField>
    <fullName>Nom_compte_financeur__c</fullName>
    <formula>Compte_financeur__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom compte financeur</label>
    <type>Text</type>
</CustomField>