force-app/main/default/objects/Partenaire_financeur__c/fields/Opportunite_financee__c.field-meta.xml
<CustomField>
    <fullName>Opportunite_financee__c</fullName>
    <label>Opportunité financée</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Partenaires_financeurs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>