force-app/main/default/objects/Partenaire_financeur__c/fields/Pourcentage_financement__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_financement__c</fullName>
    <label>Pourcentage financement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>