force-app/main/default/objects/Partenaire_financeur__c/fields/pourcentage_financement_formule__c.field-meta.xml
<CustomField>
    <fullName>pourcentage_financement_formule__c</fullName>
    <formula>(Montant_financement__c /   Opportunite_financee__r.Amount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% financement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>