force-app/main/default/objects/Partenaire_financeur__c/fields/Role_sur_l_opportunit__c.field-meta.xml
<CustomField>
    <fullName>Role_sur_l_opportunit__c</fullName>
    <label>Type de financeur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OPCA</fullName>
                <label>OPCO</label>
            </value>
            <value>
                <fullName>BOURSE</fullName>
            </value>
            <value>
                <fullName>Entreprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>